--- a/kubernetes/base/secrets.yaml
+++ b/kubernetes/base/secrets.yaml
@@ -5,6 +5,12 @@ metadata:
   namespace: default
 type: Opaque
 stringData:
-  IssuersKeys__FIAP.CloudGames.Usuario.API: "FIAP_CloudGames_Usuario_Secret_Key_2024_Min_32_Chars_Long"
-  IssuersKeys__FIAP.CloudGames.Jogo.API: "FIAP_CloudGames_Jogo_Secret_Key_2024_Min_32_Chars_Long"
-  IssuersKeys__FIAP.CloudGames.Pagamento.API: "FIAP_CloudGames_Pagamento_Secret_Key_2024_Min_32_Chars_Long"
+  # Chave individual de cada API (para assinar seus próprios tokens)
+  Jwt__Key__Usuario: "FIAP_CloudGames_Usuario_Secret_Key_2024_Min_32_Chars_Long"
+  Jwt__Key__Jogo: "FIAP_CloudGames_Jogo_Secret_Key_2024_Min_32_Chars_Long"
+  Jwt__Key__Pagamento: "FIAP_CloudGames_Pagamento_Secret_Key_2024_Min_32_Chars_Long"
+
+  # Chaves para validar tokens de outras APIs
+  Jwt__IssuersKeys__FIAP.CloudGames.Usuario.API: "FIAP_CloudGames_Usuario_Secret_Key_2024_Min_32_Chars_Long"
+  Jwt__IssuersKeys__FIAP.CloudGames.Jogo.API: "FIAP_CloudGames_Jogo_Secret_Key_2024_Min_32_Chars_Long"
+  Jwt__IssuersKeys__FIAP.CloudGames.Pagamento.API: "FIAP_CloudGames_Pagamento_Secret_Key_2024_Min_32_Chars_Long"
