--- a/kubernetes/base/usuario-api/deployment.yaml
+++ b/kubernetes/base/usuario-api/deployment.yaml
@@ -23,6 +23,11 @@ spec:
           value: "Production"
         - name: ASPNETCORE_URLS
           value: "http://+:8080"
+        - name: Jwt__Key
+          valueFrom:
+            secretKeyRef:
+              name: jwt-secrets
+              key: Jwt__Key__Usuario
         envFrom:
         - configMapRef:
             name: services-config
