--- a/kubernetes/base/jogo-api/deployment.yaml
+++ b/kubernetes/base/jogo-api/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: jogo-api
-        image: southamerica-east1-docker.pkg.dev/fiap-cloud-games/fiap-cloudgames/jogo-api:latest
+        image: southamerica-east1-docker.pkg.dev/fiap-cloud-games/fiap-cloudgames/jogo-api:v2
         ports:
         - containerPort: 8080
         env:
